# qa_guru_python_9_18

./: README.md  pyproject.toml
