[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Diana Sagaeva <d_sagaeva@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selene = "2.0.0rc7"
pytest = "^8.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
